getting beter with streaming ws

--- a/website/index-stream.html
+++ b/website/index-stream.html
@@ -34,7 +34,7 @@
         <div class="card card-signin my-5">
           <div class="card-body">
             <h3 class="text-center">Streaming</h5>
-              <img class="center" id="act-rec" src="" width="640" height="480">
+              <img class="center" id="act-rec" src="./assets/load.gif" width="640" height="480">
               
           </div>
         </div>
