--- a/website/streaming/index-stream.html
+++ b/website/streaming/index-stream.html
@@ -51,8 +51,7 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  <script src="../../assets/js/jquery/jquery.js">
   </script>
   <script>
     //  const socket = new WebSocket("ws://localhost:3000/streaming/index-stream/5fb2694ee9b50b7ac275bd21");
